force-app/main/default/objects/SBQQ__Quote__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Statut D&apos;approbation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <label>En Attente</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Approuvé</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejeté</label>
            </value>
            <value>
                <fullName>Recalled</fullName>
                <label>Rappel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>