force-app/main/default/objects/SBQQ__Quote__c/fields/Date_de_r_ception_courrier_r_siliation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_r_ception_courrier_r_siliation__c</fullName>
    <description>la date à laquelle on reçoit le courrier de résiliation envoyé par le client.</description>
    <label>Date de réception courrier résiliation</label>
    <type>Date</type>
</CustomField>