force-app/main/default/objects/SBQQ__Quote__c/fields/Date_de_r_siliation_Effective__c.field-meta.xml
<CustomField>
    <fullName>Date_de_r_siliation_Effective__c</fullName>
    <formula>IF (  Date_l_gale_de_r_siliation__c  &lt;=  Date_de_r_siliation_souhait_e__c ,Date_de_r_siliation_souhait_e__c ,Date_l_gale_de_r_siliation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de résiliation Effective</label>
    <type>Date</type>
</CustomField>