force-app/main/default/objects/SBQQ__Quote__c/fields/Date_de_r_siliation_souhait_e__c.field-meta.xml
<CustomField>
    <fullName>Date_de_r_siliation_souhait_e__c</fullName>
    <description>Date de résiliation souhaitée par le client qui est contenue dans le courrier de résiliation</description>
    <label>Date de résiliation souhaitée</label>
    <type>Date</type>
</CustomField>