force-app/main/default/objects/SBQQ__Quote__c/fields/Date_l_gale_de_r_siliation__c.field-meta.xml
<CustomField>
    <fullName>Date_l_gale_de_r_siliation__c</fullName>
    <description>Date legale de résiliation</description>
    <formula>CASE(TEXT(LPCR_DureePreavisMois__c),
&quot;2&quot;, ADDMONTHS(Date_de_r_ception_courrier_r_siliation__c ,2),
&quot;3&quot;, ADDMONTHS(Date_de_r_ception_courrier_r_siliation__c ,3),
&quot;6&quot;, ADDMONTHS(Date_de_r_ception_courrier_r_siliation__c ,6), null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date légale de résiliation</label>
    <type>Date</type>
</CustomField>