force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <label>Field set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__LineEditor</fullName>
            </value>
            <value>
                <fullName>LPCR_Amendment</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>B2C_Amendment</fullName>
            </value>
            <value>
                <fullName>Referencement</fullName>
            </value>
            <value>
                <fullName>Referencement_amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>