force-app/main/default/objects/SBQQ__Quote__c/fields/FrequenceFacturation__c.field-meta.xml
<CustomField>
    <fullName>FrequenceFacturation__c</fullName>
    <label>FrequenceFacturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensuelle</fullName>
            </value>
            <value>
                <fullName>Trimestrielle</fullName>
            </value>
            <value>
                <fullName>Semestrielle</fullName>
            </value>
            <value>
                <fullName>Annuelle</fullName>
            </value>
            <value>
                <fullName>Plan de facturation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>