force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_AccesReseauLimite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccesReseauLimite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accès réseau limité</label>
    <type>Checkbox</type>
</CustomField>