force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_AccountPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccountPurchaseOrder__c</fullName>
    <formula>SBQQ__Account__r.LPCR_PurchaseOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Po</label>
    <type>Checkbox</type>
</CustomField>