force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Added_Product_Using_QCP__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Added_Product_Using_QCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added Product Using QCP</label>
    <type>Checkbox</type>
</CustomField>