force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_AmendmentDateOK__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmendmentDateOK__c</fullName>
    <formula>if(ISPICKVAL(SBQQ__Type__c, &apos;Amendment&apos;), 
    if( Or(RecordType.DeveloperName = &apos;Reservataire&apos;, RecordType.DeveloperName = &apos;Reservataire_Approuve&apos;),
        if( ISPICKVAL(SBQQ__BillingFrequency__c, &apos;Monthly&apos;), 
            if( AND(SBQQ__StartDate__c &gt;= TODAY(), DAY(SBQQ__StartDate__c)= 1) , &apos;OK&apos;, &apos;KO&apos;),
         if(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;Quarterly&apos;), 
            if( AND(SBQQ__StartDate__c &gt;= TODAY(), DAY(SBQQ__StartDate__c)= 1, OR(MONTH(SBQQ__StartDate__c)= 1, MONTH(SBQQ__StartDate__c)= 4, MONTH(SBQQ__StartDate__c)= 7, MONTH(SBQQ__StartDate__c)= 12)) , &apos;OK&apos;, &apos;KO&apos;), 
        &apos;KO&apos; )),
    NULL),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Date OK</label>
    <type>Text</type>
</CustomField>