force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_AnnulationAnticipee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AnnulationAnticipee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annulation Anticipée</label>
    <type>Checkbox</type>
</CustomField>