force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ARecalculer__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ARecalculer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A recalculer</label>
    <type>Checkbox</type>
</CustomField>