force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_AValider__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AValider__c</fullName>
    <formula>OR( LPCR_LigneSuperieurePP__c  &lt;&gt; 0,  LPCR_LigneInferieurePP__c  &lt;&gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A Valider</label>
    <type>Checkbox</type>
</CustomField>