force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_BatchCommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BatchCommande__c</fullName>
    <label>Lot de facture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAC</fullName>
            </value>
            <value>
                <fullName>MICRO</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>En Attente</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Batch 1</fullName>
            </value>
            <value>
                <fullName>Batch 2</fullName>
            </value>
            <value>
                <fullName>Batch 3</fullName>
            </value>
            <value>
                <fullName>Batch 4</fullName>
            </value>
            <value>
                <fullName>Batch 5</fullName>
            </value>
            <value>
                <fullName>Batch 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>