force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Berceauxgratuitsquote__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Berceauxgratuitsquote__c</fullName>
    <label>Nombre berceaux gratuits quote</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.TECH_ProductCode__c</field>
        <operation>equals</operation>
        <value>BerceauGratuit</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>