force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_BesoinApprobation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BesoinApprobation__c</fullName>
    <formula>IF( (  LPCR_LIGNEINFERIEURPRIXPLANCHER__c +  LPCR_LIGNESUPERIEUREPRIXPLANCHER__c )&gt;0,True,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Besoin D&#39;approbation</label>
    <type>Checkbox</type>
</CustomField>