force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_BesoinApprobationDELETE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BesoinApprobationDELETE__c</fullName>
    <formula>IF( ( LPCR_LigneInferieurePP__c + LPCR_LigneSuperieurePP__c )&gt;0,True,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Besoin D&apos;approbation</label>
    <type>Checkbox</type>
</CustomField>