force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_BonCommandeEnvoye__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BonCommandeEnvoye__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bon de commande envoyé</label>
    <type>Checkbox</type>
</CustomField>