force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Bypass__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Bypass__c</fullName>
    <formula>CASE(SBQQ__Status__c,
&quot;Prêt à envoyer	&quot;,1,
&quot;Prêt à commander	&quot;,1,		
&quot;Signé&quot;,1,
&quot;Actif&quot;,1,
&quot;Annulé&quot;,1,
&quot;Terminé&quot;,1,
0)=1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bypass</label>
    <type>Checkbox</type>
</CustomField>