force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ByPassPriceRule__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ByPassPriceRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Price Rule Calculation</label>
    <type>Checkbox</type>
</CustomField>