force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_CheckboxTechnique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CheckboxTechnique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Technique</label>
    <type>Checkbox</type>
</CustomField>