force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ChequeReservation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ChequeReservation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chèque réservation</label>
    <type>Checkbox</type>
</CustomField>