force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ChiffreAffaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ChiffreAffaire__c</fullName>
    <label>Chiffre d&#39;affaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>