force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ChiffreAffaires__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ChiffreAffaires__c</fullName>
    <label>CA Commercial</label>
    <summarizedField>SBQQ__QuoteLine__c.LPCR_CAUnitaire__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__ChargeType__c</field>
        <operation>equals</operation>
        <value>Recurring</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__HasConsumptionSchedule__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Quantity__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>