force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Cloned__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned</label>
    <type>Checkbox</type>
</CustomField>