force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_CommercialB2B__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CommercialB2B__c</fullName>
    <formula>LPCR_ContractEntreprise__r.LPCR_Sales_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial B2B</label>
    <type>Text</type>
</CustomField>