force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_CompteFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteFacturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte de facturation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Compte de facturation)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>