force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Conditionsparticulieres__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Conditionsparticulieres__c</fullName>
    <label>Conditions particulères</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>