force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_CongesJours__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CongesJours__c</fullName>
    <label>Congés en jours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>