force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_CongesSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CongesSemaine__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(SBQQ__Type__c, &apos;Quote&apos;),
    ISPICKVAL(SBQQ__Type__c, &apos;Renewal&apos;)
  ),
  IF(
    OR(
      ISBLANK(LPCR_PlanningEnfant__c),
      text(LPCR_PlanningEnfant__r.LPCR_TypePlanning__c) = &quot;Planning Tournant&quot;
    ),
    0,
    CASE(
      LPCR_PlanningEnfant__r.LPCR_TypePlanning__c,
      &quot;Planning Classique&quot;,
      (LPCR_CongesJours__c / LPCR_PlanningEnfant__r.LPCR_NombreJoursAccueil__c) * (365 / ((SBQQ__EndDate__c - SBQQ__StartDate__c)+1)),
      &quot;Multi-Planning&quot;,
      (LPCR_CongesJours__c / LPCR_PlanningEnfant__r.LPCR_MoyenneJoursSemaine__c) * (365 / ((SBQQ__EndDate__c - SBQQ__StartDate__c)+1)),
      0
    )
  ),
  IF(
    OR(
      ISBLANK(LPCR_PlanningEnfant__c),
      text(LPCR_PlanningEnfant__r.LPCR_TypePlanning__c) = &quot;Planning Tournant&quot;
    ),
    0,
    CASE(
      LPCR_PlanningEnfant__r.LPCR_TypePlanning__c,
      &quot;Planning Classique&quot;,
      (LPCR_CongesJours__c / LPCR_PlanningEnfant__r.LPCR_NombreJoursAccueil__c) * (365 / ((SBQQ__EndDate__c - SBQQ__MasterContract__r.StartDate)+1)),
      &quot;Multi-Planning&quot;,
      (LPCR_CongesJours__c / LPCR_PlanningEnfant__r.LPCR_MoyenneJoursSemaine__c) * (365 / ((SBQQ__EndDate__c - SBQQ__MasterContract__r.StartDate)+1)),
      0
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conges Semaine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>