force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_CongesSemaine_Del__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CongesSemaine_Del__c</fullName>
    <label>Congés en semaine</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>