force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContactEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactEnfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Enfant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Devis (Contact Enfant)</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>