force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContactFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactFacturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Facturation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Devis (Contact Facturation)</relationshipLabel>
    <relationshipName>DevisContactFacturation</relationshipName>
    <type>Lookup</type>
</CustomField>