force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContactFacturationFormule__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactFacturationFormule__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>Contact Facturation</label>
    <type>Text</type>
</CustomField>