force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContactInscriptionsFormule__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactInscriptionsFormule__c</fullName>
    <formula>SBQQ__Account__r.LPCR_ContactInscriptions__c</formula>
    <label>Contact Inscriptions</label>
    <type>Text</type>
</CustomField>