force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContactPrincipalFormule__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactPrincipalFormule__c</fullName>
    <formula>SBQQ__Account__r.LPCR_ContactPrincipalCompte__c</formula>
    <label>Contact Principal</label>
    <type>Text</type>
</CustomField>