force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContactRepresentant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactRepresentant1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Représentant 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Devis (Contact Représentant 1)</relationshipLabel>
    <relationshipName>Devis1</relationshipName>
    <type>Lookup</type>
</CustomField>