force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Contracted_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Contracted_Checkbox__c</fullName>
    <formula>SBQQ__Opportunity2__r.LPCR_Contract_CheckBox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Checkbox</label>
    <type>Checkbox</type>
</CustomField>