force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContractEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContractEntreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Entreprise</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes (Contrat Entreprise)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>