force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContratEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratEntreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Entreprise_Del</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Devis (LPCR_ContratEntreprise)</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>