force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ContratManuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratManuel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>cette case doit être cochée si le client fournit son propre modèle de contrat</description>
    <inlineHelpText>cette case doit être cochée si le client fournit son propre modèle de contrat</inlineHelpText>
    <label>Contrat Manuel</label>
    <type>Checkbox</type>
</CustomField>