force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Creation_conforme__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creation_conforme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Création conforme</label>
    <type>Checkbox</type>
</CustomField>