force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crèche</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Creche</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Devis (Crèche)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>