force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_CrecheNonOuverte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrecheNonOuverte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conditionne l&apos;affichage de la section suivante sur les contrats:
L’ouverture étant liée à la délivrance de nombreuses autorisations administratives (autorisation de la Mairie, agrément du Conseil Départemental…), le Groupe Les Petits Chaperons Rouges n’a à ce sujet qu’une obligation de moyen. Si la date d’ouverture de la crèche est décalée, la prise d’effet du contrat le serait de la même façon.</description>
    <inlineHelpText>L’ouverture étant liée à la délivrance de nombreuses autorisations administratives...</inlineHelpText>
    <label>Crèche non ouverte</label>
    <type>Checkbox</type>
</CustomField>