force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_CreePar__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CreePar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Créé par User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Devis1</relationshipName>
    <type>Lookup</type>
</CustomField>