force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Date_Annulation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Date_Annulation__c</fullName>
    <label>Date d&apos;annulation</label>
    <type>Date</type>
</CustomField>