force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DateLegaleResiliation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateLegaleResiliation__c</fullName>
    <description>Date legale de résiliation</description>
    <formula>CASE(TEXT(LPCR_DureePreavisMois__c),
&quot;2&quot;, ADDMONTHS(LPCR_DateReceptionCourrierResiliation__c ,2),
&quot;3&quot;, ADDMONTHS(LPCR_DateReceptionCourrierResiliation__c ,3),
&quot;6&quot;, ADDMONTHS(LPCR_DateReceptionCourrierResiliation__c ,6), null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date théorique de fin de contrat, en fonction du préavis prévu initialement</inlineHelpText>
    <label>Résiliation Suivant Préavis</label>
    <type>Date</type>
</CustomField>