force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DateReceptionCourrierResiliation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateReceptionCourrierResiliation__c</fullName>
    <description>la date à laquelle on reçoit le courrier de résiliation envoyé par le client.</description>
    <inlineHelpText>&quot;Date de réception du courrier de résiliation recommandé&quot;</inlineHelpText>
    <label>Date de réception courrier résiliation</label>
    <type>Date</type>
</CustomField>