force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DateResiliation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateResiliation__c</fullName>
    <inlineHelpText>Date de fin de facturation réelle, définitive.</inlineHelpText>
    <label>Date de Résiliation Choisie</label>
    <type>Date</type>
</CustomField>