force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DateResiliationSouhaitee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateResiliationSouhaitee__c</fullName>
    <inlineHelpText>Date de fin d&apos;accueil demandée par le client</inlineHelpText>
    <label>Date de résiliation souhaitée</label>
    <type>Date</type>
</CustomField>