force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DateRevisionPrix__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateRevisionPrix__c</fullName>
    <label>Date de révision de prix</label>
    <type>Date</type>
</CustomField>