force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DateSignatureContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateSignatureContrat__c</fullName>
    <label>Date signature contrat</label>
    <type>Date</type>
</CustomField>