force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DepotGarantie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DepotGarantie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dépôt de garantie</label>
    <type>Checkbox</type>
</CustomField>