force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DureeContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeContrat__c</fullName>
    <label>Durée contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Durée déterminée</fullName>
            </value>
            <value>
                <fullName>Durée indéterminée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>