force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DureeContratJour__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeContratJour__c</fullName>
    <formula>SBQQ__EndDate__c - SBQQ__StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée du contrat en jours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>