force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DureeEngagementRef__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeEngagementRef__c</fullName>
    <label>Durée d&apos;engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pas d&apos;engagement</fullName>
            </value>
            <value>
                <fullName>1 an</fullName>
                <default>true</default>
                <label>1 an</label>
            </value>
            <value>
                <fullName>2 ans</fullName>
            </value>
            <value>
                <fullName>3 ans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>