force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_DureePreavisMois__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureePreavisMois__c</fullName>
    <label>Durée Préavis résiliation en mois</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>