force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_EntiteJuridique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EntiteJuridique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité Juridique</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>